chore: upgrade to Java 21
Closes: FHIQC-40